plang/testing/logs/false-incorrect/85/program85.p.p
iTecb CrAM (dZ (OV)) (Eq) (Xk) :- p FH (tDleC my1) (oLF (GtvFj) (NtZs)); fzX (JEqBu) (jxLW vk (ji5 vjQ (jSNF CgBUR A (jTES E N3th P) (L))) l).
vNTbZ bZA (owV htEN (N)).


thf zaWGR :- ylX7.
k d7If (egtL3 (sZ8U (upxQ6) z6BCq p)) N :- (rGzs4 (K) Up6 L2Ifv (D8E1Z); iCJ AnGH y5 O (yM2Kj); gZ6 jRhY; fn; ((kwia P WGoh Y6 eNl))); wWIj (E), (hI0 (EimeY) DcLR; ly (ZYF) Xn (vS)); mvJwT; hWxMx.


kJxNT (DVGqO) (Wy) :- w2tSK h A7f jo erL; ezF K5 (M).
f5FG FeLvC.
o.

d (f (QP)) U2Tq (FZuKP) :- (wFq1 UF; bxxIu tk (bS (vu) LoQ7R QJvo), tX (Qucr) D6R Extd; tU1TZ Dlnnz n2 (Q); mfNl (Bxg); br, f (oq3D) (K) (HAn) kZJlM).

? pb Tg jJ1 (E).